# netpro-pro

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  package-lock.json
.github/workflows/: build-windows.yml
backend/: Dockerfile  env.example  requirements.txt
backend/app/: database.py  main.py  models.py  schemas.py
backend/app/core/: network_logic.py
backend/app/persistence/: auth_logic.py  database.py  models.py
backend/app/routers/: actividades.py  auth.py  logs.py  proyectos.py  usuarios.py  versiones.py
docs/: arquitectura.md  entorno_desarrollo.md  flujo_trabajo.md  manual_usuario.md
frontend/: .env.production  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.css  App.jsx  Monitor.jsx
frontend/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/api/: netproApi.js
frontend/src/hooks/: useAuditLogs.js  useDashboard.js  useEditor.js  useLogin.js  useMonitor.js  useProjectManagement.js  useReportMetrics.js  useSimulationEngine.js  useSimulationPage.js  useUserManagement.js  useVersionHistory.js  useWorkspace.js
frontend/src/pages/: ConfigurationPage.jsx  Dashboard.jsx  Editor.jsx  Login.jsx  Monitor.jsx  ProjectManagementPage.jsx  Report.jsx  Simulation.jsx  VersionHistory.jsx  VisorLogs.jsx  Workspace.jsx
frontend/src/store/: constants.js  useNetProStore.js
infra/: docker-compose.yml
(+68 files in other folders)
