[package]
name = "netpro"
version = "1.0.0"
description = "NetPro Engine - Sistema de diseño y simulación de topologías de red"
authors = ["NetPro Team"]
edition = "2021"
rust-version = "1.77.2"

# Para que el binario `netpro` (en src/main.rs) pueda enlazar la lib (`netpro_lib`)
# y, simultáneamente, esté listo para móvil (tauri-mobile crea la entrada vía la lib).
[lib]
name = "netpro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Optimizaciones de tamaño/velocidad para el binario release.
# Tauri por defecto produce binarios pequeños; estos flags lo afinan más.
[profile.release]
panic     = "abort"   # No desenrollar la pila → menos código en el binario
codegen-units = 1     # Mejor optimización entre módulos
lto       = true      # Link-time optimization
opt-level = "s"       # Optimizar por tamaño (vs "3" que prioriza velocidad)
strip     = true      # Quitar símbolos de debug del binario final
